# ai-powered-finance

./: IMAGES-PPT.md  IMAGES.md  README.md
ai_powered_finance/: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  requirements_dev.txt  tox.ini
ai_powered_finance/.github/: ISSUE_TEMPLATE.md
ai_powered_finance/docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
ai_powered_finance/src/ai_powered_finance/: __init__.py  app.py  cli.py
ai_powered_finance/tests/: __init__.py  test_ai_powered_finance.py
